// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly the date field 1`] = `
<div
  className="ui container"
>
  <div>
    <p>
      <strong>
        Date of birth
      </strong>
      : 
      12/12/2012
    </p>
  </div>
</div>
`;

exports[`renders correctly the name field 1`] = `
<div
  className="ui container"
>
  <div>
    <p>
      <strong>
        Name
      </strong>
      : 
      Mario Rossi
    </p>
  </div>
</div>
`;

exports[`renders correctly without edit prop 1`] = `
<div
  className="ui container"
>
  <div>
    <p>
      <strong>
        Date of birth
      </strong>
      : 
      12/12/2012
    </p>
  </div>
</div>
`;
